Fixed image styling in sections clipping through the section

--- a/style/style.css
+++ b/style/style.css
@@ -165,6 +165,11 @@
         display: flex;
         
     }
+       .section img{
+        width: 100%;
+        height: 100%;
+        object-fit: fill;
+    }
 
     .section-title {
         width: 100%;
